<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context="com.firentistfw.kindlehighlights.ui.highlightdetails.HighlightDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_open_book" />

            <TextView
                style="@style/HeadlineMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/highlightDetails_quote" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvQuote"
            style="@style/QuoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/llNoteHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_pen" />

            <TextView
                style="@style/HeadlineMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/highlightDetails_note" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvNote"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_open_book" />

            <TextView
                style="@style/HeadlineMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/highlightDetails_book" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvBook"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_calendar" />

            <TextView
                style="@style/HeadlineMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/highlightDetails_date" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_label" />

            <TextView
                style="@style/HeadlineMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/highlightDetails_categories" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAssignedCategories"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnManageCategories"
            style="@style/PrimaryButton"
            android:text="@string/highlightDetails_manageCategoriesButton" />

        <!-- FIXME Give this button proper onTap feedback -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRemoveHighlight"
            style="@style/DangerButton"
            android:text="@string/highlightDetails_removeHighlightButton" />
    </LinearLayout>
</ScrollView>
